# FSAE-AutonomousKarting

./: .gitignore  .gitmodules  LICENSE  README.md  RepoMigrationScripts.py  berkeley_base.rviz  core.repos  costmap__costmap.yaml  frames.gv  hardware.repos  launches.repos  local_planner__trajectory__generator.yaml  map_1694661566.yaml  map_server.yaml  package-lock.json  restart_ros2_daemon.sh  roar__map_server.yaml  septentrio_gnss_driver.yaml  simulation.repos  slam_toolbox.yaml
Additional Repos/arduino_comm/: package.xml  setup.cfg  setup.py
Additional Repos/arduino_comm/arduino_comm/: __init__.py  arduino_comm_node.py
Additional Repos/arduino_comm/launch/: arduino.launch.py
Additional Repos/arduino_comm_cpp/: CMakeLists.txt  package.xml
Additional Repos/arduino_comm_cpp/include/arduino_comm_cpp/: arduino_comm_node.hpp
Additional Repos/arduino_comm_cpp/src/: arduino_comm_node.cpp
Additional Repos/control_converter/: CMakeLists.txt  package.xml
Additional Repos/control_converter/include/control_converter/: control_converter_node.hpp
Additional Repos/control_converter/src/: control_converter_node.cpp
Additional Repos/core/src/control/controller_manager/: CMakeLists.txt  package.xml  plugins.xml
Additional Repos/core/src/control/controller_manager/launch/: controller.launch.py
Additional Repos/core/src/control/controller_manager/params/: configs.yaml  json_read.cpp
Additional Repos/core/src/control/controller_manager/src/: controller_manager_node.cpp  controller_manager_ros.cpp  pid_controller.cpp
Additional Repos/core/src/control/pid_control/: CMakeLists.txt  package.xml  readme.md
Additional Repos/core/src/misc/vehicle_state_manager/: CMakeLists.txt  package.xml
Additional Repos/core/src/misc/vehicle_state_manager/launch/: vehicle_state_manager.launch.py
Additional Repos/core/src/misc/vehicle_state_manager/params/: configs.yaml
Additional Repos/core/src/misc/vehicle_state_manager/src/: vehicle_state_manager_node.cpp
Additional Repos/core/src/planning/behavior_planning/: CMakeLists.txt  package.xml
Additional Repos/core/src/planning/behavior_planning/launch/: behavior_planning.launch.py
Additional Repos/core/src/planning/behavior_planning/param/: default.xml  default.yml
Additional Repos/core/src/planning/behavior_planning/src/: behavior_planner_manager.cpp  default_behavior_planner.cpp
Additional Repos/core/src/planning/costmap_node_manager/: CMakeLists.txt
Additional Repos/core/src/planning/costmap_node_manager/config/: config.yaml
Additional Repos/core/src/planning/costmap_node_manager/launch/: costmap_node_manager.launch.py
Additional Repos/core/src/planning/global_planning/: CMakeLists.txt  package.xml
Additional Repos/core/src/planning/global_planning/launch/: global_planner_manager.launch.py  map_server.launch.py
Additional Repos/core/src/planning/global_planning/src/: global_planner_manager.cpp
Additional Repos/core/src/planning/interfaces/: CMakeLists.txt
Additional Repos/core/src/planning/interfaces/action/: TrajectoryGeneration.action
Additional Repos/core/src/planning/interfaces/srv/: LoadMap.srv  TrajectoryScoring.srv
Additional Repos/core/src/planning/local_planning/local_planner_manager/: CMakeLists.txt  package.xml
Additional Repos/core/src/roar_msgs/: CMakeLists.txt  package.xml
Additional Repos/core/src/roar_msgs/msg/: BehaviorStatus.msg  VehicleControl.msg  VehicleState.msg  VehicleStatus.msg
Additional Repos/core/src/roar_msgs/srv/: ToggleControlSafetySwitch.srv
Additional Repos/hardware/src/gokart_hardware_launches/: CMakeLists.txt
Additional Repos/hardware/src/gokart_hardware_launches/launch/: gokart_hardware_launch_with_auto_control.launch.py  gokart_sensor_bringup.launch.py  lidar.launch.py
Additional Repos/hardware/src/gokart_hardware_launches/param/: center_livox_lidar_config.json
Additional Repos/hardware/src/gokart_hardware_launches/src/: roar_gokart_converter.cpp
Additional Repos/roar_gokart_interface/: package.xml
Additional Repos/roar_gokart_interface/launch/: gokart_hardware_launch_with_auto_control.launch.py  gokart_hardware_launch_with_manual_control.launch.py  gokart_sensor_bringup.launch.py  zed.launch.py
Additional Repos/roar_gokart_interface/src/: roar_gokart_converter.cpp
Additional Repos/roar_gokart_msgs/: CMakeLists.txt  package.xml
Additional Repos/roar_gokart_msgs/msg/: EgoVehicleControl.msg  VehicleStatus.msg
Additional Repos/roar_septentrio_interface/: CMakeLists.txt  package.xml
Additional Repos/roar_septentrio_interface/include/roar_septentrio_interface/: roar_septentrio_interface_node.hpp
Additional Repos/roar_septentrio_interface/launch/: interface.launch.py
Additional Repos/roar_septentrio_interface/param/: config.yaml
Additional Repos/roar_septentrio_interface/src/: roar_septentrio_interface_node.cpp
Additional Repos/robot_localization/: CMakeLists.txt  README.md  package.xml
Additional Repos/robot_localization/include/roar_robot_localization/: localization_hack.hpp
Additional Repos/robot_localization/launch/: robot_localization.launch.py
Additional Repos/robot_localization/params/: configs.yaml  localization.rviz
Additional Repos/robot_localization/src/: localization_hack.cpp
Additional Repos/simulation/roar_simulation_msgs/: CMakeLists.txt  package.xml
Additional Repos/simulation/roar_simulation_msgs/msg/: VehicleControl.msg
repos/: gokart.repos  simulation.repos
src/agent/src/control/controller_manager/: CMakeLists.txt  package.xml
src/agent/src/control/controller_manager/launch/: controller.launch.py
src/agent/src/control/controller_manager/params/: carla_pid.json  configs.yaml
src/agent/src/control/controller_manager/src/: controller_manager_node.cpp  controller_manager_ros.cpp  pid_controller.cpp
src/agent/src/planning/global_planner_manager/: CMakeLists.txt  package.xml  readme.md
src/agent/src/planning/interfaces/: CMakeLists.txt  package.xml
src/agent/src/planning/simple_local_planner/: CMakeLists.txt  package.xml
src/agent/src/utilities/control_interfaces/: CMakeLists.txt  package.xml
(+399 files in other folders)
