<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_converter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wuxiaohua1011@gmail.com">michael</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav2_common</build_depend>

  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav2_core</depend>
  <depend>roar_gokart_msgs </depend>
  <depend>ackermann_msgs</depend>


  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
