<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gokart_hardware_launches</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wuxiaohua1011@gmail.com">michael</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>livox_ros2_driver</build_depend>
  <build_depend>zed_wrapper</build_depend>
  <build_depend>point_one_gps_driver</build_depend>
  <build_depend>arduino_comm</build_depend>
  <build_depend>roar_gokart_msgs</build_depend>
  <build_depend>roar_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
