<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_local_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wuxiaohua1011@gmail.com">michael</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav_msgs </depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_interfaces</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
